PR target/5740 	* expr.c (emit_group_load): Use extract_bit_field if 	needed for CONCAT arguments.
	* g++.dg/opt/conj1.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50973 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-18  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/5740
+	* expr.c (emit_group_load): Use extract_bit_field if
+	needed for CONCAT arguments.
+
 2002-03-18  Richard Earnshaw  <rearnsha@arm.com>
 
 	PR target/4863
