--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-18  Jason Merrill  <jason@redhat.com>
+
+	* configure.in: Disable checking by default on release branch.
+
 2002-03-18  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/5740
