--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-18  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/opt/conj1.C: New test.
+
 2002-03-17  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/template/qualttp20.C: Revert previous change.
