PR c++/5995         * call.c (build_over_call): Fix empty class logic.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50977 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,5 +1,8 @@
 2002-03-18  Jason Merrill  <jason@redhat.com>
 
+	PR c++/5995
+	* call.c (build_over_call): Fix empty class logic.
+
 	PR c++/3870
 	* cp-tree.h (struct saved_scope): Add last_parms field.
 	* decl.c (maybe_push_to_top_level): Save last_function_parms.
