--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-18  Bob Wilson  <bob.wilson@acm.org>
+
+	* config/xtensa/xtensa.h (GO_IF_MODE_DEPENDENT_ADDRESS): Treat
+	constant-pool addresses as "mode-dependent".
+
 Mon Mar 18 18:12:48 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.c (override_options): Disallow preferred_stack_boundary to be
