--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-18  Alexandre Oliva  <aoliva@redhat.com>
 
+	* config/mips/mips.h (ENCODE_SECTION_INFO) [TARGET_MIPS16]: Don't
+	use %gprel for symbols that are going to be placed in linkonce
+	sections.
+
 	* config/mips/mips.h (ELIMINABLE_REGS): Can't eliminate
 	RETURN_ADDRESS_POINTER_REGNUM to $ra.
 	(CAN_ELIMINATE): Only eliminate it to $sp if a frame pointer is
