--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-18  Alexandre Petit-Bianco  <apbianco@redhat.com>
+
+	* builtins.c (define_builtin): Do nothing if `type' is null.
+	Fixes PR java/5876.
+
 2002-03-18  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* parse.y (parser_check_super_interface): Fix error message
