--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-18  Ashif Harji  <asharji@uwaterloo.ca>
+
+	* lang-specs.h (compiler default_compilers): Add   
+	-no-integrated-cpp flag to invoke an external cpp.
+
 2002-03-18  Jason Merrill  <jason@redhat.com>
 
 	PR c++/2039
