--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-18  Tom Tromey  <tromey@redhat.com>
+
+	* libjava.jni/jni.exp (gcj_jni_test_one): Find libstdc++ in build
+	tree.
+	(gcj_invoke): Added ld_library_additions argument.
+
 2002-03-17  Tom Tromey  <tromey@redhat.com>
 
 	* libjava.jni/jni.exp (gcj_jni_build_header): Use local_exec, not
