--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-18  Mark Mitchell  <mark@codesourcery.com>
+
+	* calls.c (precompute_arguments): Do not assume that temporaries 
+	can be destroyed after expanding the argument.
+	(expand_call): Likewise.
+
 2002-03-18  Ashif Harji  <asharji@uwaterloo.ca>
 
 	* gcc.c (struct compiler default_compilers): Add
