* calls.c (precompute_arguments): Do not assume that temporaries 	can be destroyed after expanding the argument. 	(expand_call): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51011 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-18  Mark Mitchell  <mark@codesourcery.com>
+
+	* calls.c (precompute_arguments): Do not assume that temporaries 
+	can be destroyed after expanding the argument.
+	(expand_call): Likewise.
+
 2002-03-15  Eric Christopher  <echristo@redhat.com>
 
 	* config/mips/mips.md (movdf_internal2): Add two new move constraints.
