--- a/gcc-3_1-branch/gcc/cp/NEWS
+++ b/gcc-3_1-branch/gcc/cp/NEWS
@@ -4,6 +4,10 @@
   a workaround to allow std compliant code to work with the non-std
   compliant libstdc++-v2. libstdc++-v3 is std compliant.
 
+* The C++ ABI has been fixed so that `void (A::*)() const' is mangled as
+  "M1AKFvvE", rather than "MK1AFvvE" as before.  This change only affects
+  pointer to cv-qualified member function types.
+
 * The C++ ABI has been changed to correctly handle this code:
 	
     struct A {
