--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-18  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gcse.c (insert_insn_end_bb): Fix typo in last change.
+
 2002-03-18  Mark Mitchell  <mark@codesourcery.com>
 
 	* calls.c (precompute_arguments): Do not assume that temporaries 
