* gcc.dg/struct-by-value-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51026 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -2,6 +2,8 @@
 
 	* gcc.c-torture/compile/20020318-1.c: New test.
 
+	* gcc.dg/struct-by-value-1.c: New test.
+
 2002-03-18  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/opt/conj1.C: New test.
