* emit-rtl.c (gen_int_mode): New function.         * rtl.h: Prototype for it.         * combine.c (make_extraction, simplify_comparison), expmed.c         (store_bit_field, expand_mult_highpart, expand_divmod), expr.c         (convert_modes, store_field), optabs.c (expand_fix),         simplify-rtx.c (neg_const_int, simplify_unary_real),
        * config/rs6000/rs6000.c, config/rs6000/rs6000.md:
        Use it instead of GEN_INT (trunc_int_for_mode (...)).


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51030 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -7819,7 +7819,7 @@
   else
     operands[2] = gen_lowpart (SImode, operands[0]);
 
-  operands[3] = GEN_INT (trunc_int_for_mode (l, SImode));
+  operands[3] = gen_int_mode (l, SImode);
 }")
 
 (define_insn "*movsf_hardfloat"
@@ -7909,8 +7909,8 @@
 
   operands[2] = operand_subword (operands[0], endian, 0, DFmode);
   operands[3] = operand_subword (operands[0], 1 - endian, 0, DFmode);
-  operands[4] = GEN_INT (trunc_int_for_mode (l[endian], SImode));
-  operands[5] = GEN_INT (trunc_int_for_mode (l[1 - endian], SImode));
+  operands[4] = gen_int_mode (l[endian], SImode);
+  operands[5] = gen_int_mode (l[1 - endian], SImode);
 }")
 
 (define_split
