* config/sparc/sparc.h (CAN_ELMINIATE): Can only eliminate FP 	in favor of SP if FRAME_POINTER_REQUIRED is false.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51031 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar 19 14:12:32 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* config/sparc/sparc.h (CAN_ELMINIATE): Can only eliminate FP
+	in favor of SP if FRAME_POINTER_REQUIRED is false.
+
 2002-03-19  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/5656
