* config/xtensa/xtensa.md (adddi3, adddi_carry, subdi3,         subdi_carry): Define.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51039 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-19  Bob Wilson  <bob.wilson@acm.org>
+
+	* config/xtensa/xtensa.md (adddi3, adddi_carry, subdi3,
+	subdi_carry): Define.
+
 2002-03-19  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/rs6000.c (rs6000_override_options): Only warn
