PR optimization/5999, middle-end/5731 	* expr.c (expand_expr) [RDIV_EXPR]: Only convert real divisions into 	multiplications by reciprocals.
	* gcc.c-torture/compile/20020319-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51040 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -4,6 +4,8 @@
 
 	* gcc.dg/struct-by-value-1.c: New test.
 
+	* gcc.c-torture/compile/20020319-1.c: New test.
+
 2002-03-18  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* gcc.dg/cpp/wchar-1.c: Fix test.
