--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-19  Jason Merrill  <jason@redhat.com>
+
+	* Makefile.in (LIBGCC2_DEBUG_CFLAGS): Set to -g.
+
 2002-03-19  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/xtensa.md (adddi3, adddi_carry, subdi3,
