* Makefile.in (LIBGCC2_DEBUG_CFLAGS): Set to -g.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51042 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-19  Jason Merrill  <jason@redhat.com>
+
+	* Makefile.in (LIBGCC2_DEBUG_CFLAGS): Set to -g.
+
 2002-03-19  Dale Johannesen  <dalej@apple.com>
 
 	PR optimization/5999, middle-end/5731
