* varasm.c (globalize_decl): Get the name from the RTL, not         DECL_ASSEMBLER_NAME.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51044 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-03-19  Jason Merrill  <jason@redhat.com>
 
+	* varasm.c (globalize_decl): Get the name from the RTL, not
+	DECL_ASSEMBLER_NAME.
+
 	* Makefile.in (LIBGCC2_DEBUG_CFLAGS): Set to -g.
 
 2002-03-19  Dale Johannesen  <dalej@apple.com>
