--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-19  Jim Blandy  <jimb@redhat.com>
+
+	* cppmacro.c (cpp_macro_definition): Emit a space after the macro
+	name, even if the replacement list contains no tokens, as required
+	by Dwarf.
+
 2002-03-19  Jason Merrill  <jason@redhat.com>
 
 	* varasm.c (globalize_decl): Get the name from the RTL, not
