--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-19  Martin Kahlert  <martin.kahlert@infineon.com>
+
+	* include/jni.h Use correct C comments 
+
 2002-03-18  Tom Tromey  <tromey@redhat.com>
 
 	* include/jni.h (JNIIMPORT): New macro.
