--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-19  Richard Henderson  <rth@redhat.com>
+
+	PR 5977, 5991
+	* config/ia64/ia64.c: Revert 2002-03-01 patch.
+	* config/ia64/ia64.h (INIT_EXPANDERS): New.
+
 2002-03-19  Olivier Hainque  <hainque@act-europe.fr>
 
 	* varasm.c (output_constant_def): Don't call ENCODE_SECTION_INFO
