--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2002-03-19  Richard Henderson  <rth@redhat.com>
+
+	* flow.c (EH_USES): Provide default.
+	(calculate_global_regs_live): Use it for EH edges and noreturn calls.
+	* doc/tm.texi (EH_USES): New.
+
+	* config/ia64/ia64.c (ia64_eh_uses): New.
+	* config/ia64/ia64-protos.h: Update.
+	* config/ia64/ia64.h (EH_USES): New.
+
 2002-03-20  Alan Modra  <amodra@bigpond.net.au>
 
 	* defaults.h (SUPPORTS_WEAK): Set if ASM_WEAKEN_DECL.
