--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-19  Richard Henderson  <rth@redhat.com>
 
+	* varasm.c (output_constant_def): Fix stupid typo.
+
+2002-03-19  Richard Henderson  <rth@redhat.com>
+
 	PR 5879
 	* except.c (current_function_has_exception_handlers): New.
 	* except.h: Declare it.
