* flow.c (EH_USES): Provide default.         (calculate_global_regs_live): Use it for EH edges and noreturn calls.         * doc/tm.texi (EH_USES): New.
        * config/ia64/ia64.c (ia64_eh_uses): New.
        * config/ia64/ia64-protos.h: Update.
        * config/ia64/ia64.h (EH_USES): New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51060 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/tm.texi
+++ b/gcc/doc/tm.texi
@@ -4042,6 +4042,12 @@ Define this macro as a C expression that is nonzero for registers that are
 used by the epilogue or the @samp{return} pattern.  The stack and frame
 pointer registers are already be assumed to be used as needed.
 
+@findex EH_USES
+@item EH_USES (@var{regno})
+Define this macro as a C expression that is nonzero for registers that are
+used by the exception handling mechanism, and so should be considered live
+on entry to an exception edge.
+
 @findex DELAY_SLOTS_FOR_EPILOGUE
 @item DELAY_SLOTS_FOR_EPILOGUE
 Define this macro if the function epilogue contains delay slots to which
