--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-19  Jim Blandy  <jimb@redhat.com>
+
+	* c-lex.c (cb_file_change): Pass the #inclusion's line number to
+	the start_source_file debug hook, not the current line number.
+
 2002-03-19  Richard Henderson  <rth@redhat.com>
 
 	* flow.c (EH_USES): Provide default.
