* c-lex.c (cb_file_change): Pass the #inclusion's line number to the start_source_file debug hook, not the current line number.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51065 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-03-19  Jim Blandy  <jimb@redhat.com>
 
+	* c-lex.c (cb_file_change): Pass the #inclusion's line number to
+	the start_source_file debug hook, not the current line number.
+
 	* cppmacro.c (cpp_macro_definition): Emit a space after the macro
 	name, even if the replacement list contains no tokens, as required
 	by Dwarf.
