* Makefile.in: Update. 	* c-common.c: Include langhooks.h. 	(inline_forbidden_p): Use new hook. 	* diagnostic.c: Include langhooks.h. 	(format_with_decl, announce_function, 	default_print_error_function): Use new hook. 	* dwarf2out.c (dwarf2_name): Use new hook. 	* function.c: Include langhooks.h. 	(init_function_start): Use new hook. 	* langhooks-def.h (lhd_decl_printable_name): New. 	(LANGHOOKS_DECL_PRINTABLE_NAME): New. 	(LANGHOOKS_INITIALIZER): Update. 	* langhooks.c (lhd_decl_printable_name): New. 	* langhooks.h (struct lang_hooks): New hook. 	* toplev.c (decl_name, decl_printable_name): Remove. 	(open_dump_file): Use new hook. 	(process_options): Remove old hook. 	* tree.h (decl_printable_name): Remove. ada: 	* misc.c (LANG_HOOKS_DECL_PRINTABLE_NAME): Redefine. 	(gnat_init): Remove old hook. cp: 	* cp-lang.c (LANG_HOOKS_DECL_PRINTABLE_NAME): Redefine. 	* cp-tree.h (lang_printable_name): Rename. 	* error.c (lang_decl_name): Use new hook. 	* lex.c (cxx_init): Remove old hook. 	* pt.c (tsubst_expr): Use new hook. 	* tree.c (lang_printable_name): Rename. f: 	* com.c (lang_printable_name): Rename. 	(LANG_HOOKS_DECL_PRINTABLE_NAME): Redefine. 	(ffe_init): Don't use old hook. java: 	* decl.c (start_java_method): Use new hook. 	* lang.c (LANG_HOOKS_DECL_PRINTABLE_NAME): Redefine. 	(java_init): Remove old hook. objc: 	* objc-act.c (objc_init): Remove old hook. 	(objc_printable_name): Export. 	* objc-act.h (objc_printable_name): New. 	* objc-lang.c (LANG_HOOKS_DECL_PRINTABLE_NAME): Redefine.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51066 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-20  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* misc.c (LANG_HOOKS_DECL_PRINTABLE_NAME): Redefine.
+	(gnat_init): Remove old hook.
+
 2002-03-17  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* misc.c (LANG_HOOKS_PARSE_FILE): Redefine.
