PR optimization/5999, middle-end/5731 	* expr.c (expand_expr) [RDIV_EXPR]: Only convert real divisions into 	multiplications by reciprocals.
	* gcc.c-torture/compile/20020319-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51071 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-19 Dale Johannesen  <dalej@apple.com>
+
+	PR optimization/5999, middle-end/5731
+	* expr.c (expand_expr) [RDIV_EXPR]: Only convert real divisions into
+	multiplications by reciprocals.
+
 2002-03-20  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* Makefile.in: Update.
