--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-20  Philip Blundell  <pb@nexus.co.uk>
+
+	* config/arm/arm.c (arm_output_epilogue): Don't generate separate
+	return instruction if PC was popped.
+
 2002-03-20  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* config/mmix/mmix.md ("fixuns_truncdfdi2"): Use (unsigned_fix:DI
