PR c++/5118         * class.c (get_vfield_name): Use the constructor_name.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51074 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-19  Jason Merrill  <jason@redhat.com>
+
+	PR c++/5118
+	* class.c (get_vfield_name): Use the constructor_name.
+
 2002-03-18  Eric Botcazou  <ebotcazou@multimania.com>
 
 	PR c++/3882
