--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-20  Jason Merrill  <jason@redhat.com>
+
+	PR c++/2136
+	* init.c (build_delete): Check access for a member op delete here.
+	* decl2.c (delete_sanity): Not here.
+
 2002-03-19  Jason Merrill  <jason@redhat.com>
 
 	PR c++/5118
