--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-20  Philip Blundell  <pb@nexus.co.uk>
+
+	* config/arm/arm.c (arm_output_epilogue): Don't generate separate
+	return instruction if PC was popped.
+
 2002-03-20  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/xtensa.md: Remove unused type attributes.
