* class.c (get_vfield_name): Use the constructor_name.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51084 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/cp/ChangeLog
+++ b/gcc-3_0-branch/gcc/cp/ChangeLog
@@ -4,6 +4,11 @@
 	* init.c (build_delete): Check access for a member op delete here.
 	* decl2.c (delete_sanity): Not here.
 
+2002-03-19  Jason Merrill  <jason@redhat.com>
+
+	PR c++/5118
+	* class.c (get_vfield_name): Use the constructor_name.
+
 2002-03-18  Jason Merrill  <jason@redhat.com>
 
 	PR c++/4222, c++/5995
