PR bootstrap/4192 	* config/fr30/fr30.md (jump): Comment out clobber of fixed register.
	* genemit.c (output_added_clobbers_hard_reg_p): Only output return
	stmt if some case has been output.

	* gcc.c-torture/compile/20020320-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51087 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20020320-1.c: New test.
+
 2002-03-19  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20020318-1.c: New test.
