--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,13 @@
 2002-03-20  Jakub Jelinek  <jakub@redhat.com>
 
+	PR bootstrap/4192
+	* config/fr30/fr30.md (jump): Comment out clobber of fixed register.
+
+	* genemit.c (output_added_clobbers_hard_reg_p): Only output return
+	stmt if some case has been output.
+
+2002-03-20  Jakub Jelinek  <jakub@redhat.com>
+
 	PR c/5972
 	* config/i386/i386.md (movdicc_c_rex64, movsicc_noc, movhicc_noc,
 	movsfcc_1, movdfcc_1): Add %O2.
