* gcj.texi: @code{gcj} becomes @command{gcj}.         @code{gcc} becomes @command{gcc}.         GcjRaw changed to gnu.gcc.RawData.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51092 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-20  Nic Ferrier  <nferrier@tapsellferrier.co.uk>
+
+       	* gcj.texi: @code{gcj} becomes @command{gcj}. 
+	@code{gcc} becomes @command{gcc}. 
+        GcjRaw changed to gnu.gcc.RawData.
+	
 2002-03-20  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* decl.c (start_java_method): Use new hook.
