* config/xtensa/xtensa.h (ASM_OUTPUT_POOL_PROLOGUE): Emit a         ".literal_position" directive before the constant pool.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51094 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-20  Bob Wilson  <bob.wilson@acm.org>
+
+	* config/xtensa/xtensa.h (ASM_OUTPUT_POOL_PROLOGUE): Emit a
+	".literal_position" directive before the constant pool.
+
 2002-03-20  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* doc/contrib.texi (Contributors): Update Geoffrey Keating.
